fix: fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,8 +519,8 @@ intro .carousel-container {
    font-weight: 800;
    color: #2088DA;
    text-transform: uppercase;
-   /* margin-bottom: 0;
-   margin-top: 7%; */
+   margin-bottom: 0px;
+   /* margin-top: 7%; */
    /* margin-top: 60px; */
  }
 
@@ -563,7 +563,7 @@ intro .carousel-container {
  }
 
  .about .single-do.active {
-   margin: 20px;
+   margin: 10px;
    box-shadow: 0px 10px 30px 0px rgba(133, 66, 189, 0.1);
  }
 
